fixes to handle improved options parsing